Mon May  9 15:45:22 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/server_config.h server/*.c: force compilation with
	  big file support, some cleanups too, fixes bug #167898
	* python/tests/Makefile.am python/tests/bigfile.py: added a 
	  specific regression test.

Mon May  9 12:49:36 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: found bug #302737 from Frederic Crozat,
	  creating a node duplicate, broke the unicity of node <->path

Mon May  9 12:15:35 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* python/tests/dnotify12.py python/tests/dnotify13.py: tests
	  trying to chase the Desktop nautilus refresh bug tracked with alex

Mon May  9 12:11:49 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_data.c: added more debugging
	* server/gam_node.c server/gam_node.h server/gam_poll.c:
	  simplification removing an extra indirection of GamNodeData
	  keeping them directly in GamNode
	* server/gam_server.c: removed a warning

Mon May  2 16:15:22 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/Makefile.am libgamin/gam_api.c
	  libgamin/gam_data.[ch]: applied patch from Nicholas Miell in
	  RH bug #154785 to make the client side thread-safe, also used
	  gcc weak symbol support on Linux to not force pthread library
	  onto the programs using the library.

Mon May  2 10:10:05 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c server/local_inotify.h: applied patch 2 from
	  John McCutchan for inotify 0.23

Fri Apr 15 14:18:53 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_debugging.h server/gam_inotify.c server/gam_inotify.h:
	  applied patch from John McCutchan to align inotify and dnotify 
	  back-end behaviours.


Fri Apr  8 08:05:30 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: more fixes
	* python/tests/Makefile.am python/tests/dnotify1[01].py: more
	  regression tests
